--- a/app/views/wines/new.html.erb
+++ b/app/views/wines/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Add a wine</h1>
-<%= render 'partials/form', wine: @wine %>
+<div class="container">
+  <h1>Add a wine</h1>
+  <%= render 'partials/form', wine: @wine %>
+</div>
