--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -1,3 +1,8 @@
 <div class="container">
   <%= link_to 'add a vino', new_wine_path %>
+  <% if @wines %>
+    <% @wines.each do |wine| %>
+      <%= link_to wine.name, wine_path(wine) %>
+    <% end %>
+  <% end %>
 </div>
