--- a/app/views/wines/show.html.erb
+++ b/app/views/wines/show.html.erb
@@ -7,7 +7,7 @@
   <p><%= @wine.sweetness %></p>
   <p><%= @wine.acidity %></p>
   <p><%= @wine.tannin %></p>
-  <p>%<%= @wine.alcohol %></p>
+  <p><%= @wine.alcohol %></p>
   <p><%= @wine.body %></p>
   <%= link_to "back", wines_path %>
   <%= link_to "edit", edit_wine_path(@wine) %>
