--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,15 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;400;700&display=swap');
-    </style>
   </head>
 
   <body>
+    <% unless controller_name == 'pages' && action_name == 'home'%>
+      <%= render partial: 'partials/header' %>
+    <% end %>
     <%= yield %>
+    <% unless controller_name == 'pages' && action_name == 'home' %>
+      <%= render partial: 'partials/footer' %>
+    <% end %>
   </body>
 </html>
