--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,7 +1,22 @@
+@import 'fonts';
+
 .footer {
+  background-color: transparent;
+  height: 60px;
+  padding: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 60px;
   margin-top: auto;
+
+  a {
+    text-decoration: none;
+    font-family: $font-header;
+    font-weight: $font-weight-light;
+    color: black;
+    margin-left: 40px;
+    padding-bottom: 8px;
+    opacity: 0.6;
+    transition: 0.3s ease-in-out;
+  }
 }
