--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,11 +25,13 @@ html {
   height: 100%;
 }
 
+$salmon-color: #FEF3EA;
+
 body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  background-color: #FEF3EA;
+  background-color: $salmon-color;
   padding: 0;
   margin: 0;
 }
