--- a/app/assets/stylesheets/_container.scss
+++ b/app/assets/stylesheets/_container.scss
@@ -10,3 +10,11 @@
   margin-top: 4rem;
   margin-bottom: 4rem;
 }
+
+.flex-container {
+  width: 800px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  margin-top: 2rem;
+}
