--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comme:wght@200;400;700&display=swap');
 
-$font-header: 'Cormorant Unicase', sans-serif;
-$font-weight-light: 300;
+$font-header: 'Comme', sans-serif;
+$font-weight-light: 200;
 $font-weight-regular: 400;
 $font-weight-bold: 700;
