--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -4,6 +4,8 @@
   background-color: transparent;
   height: 60px;
   padding: 16px;
+  margin-left: 40px;
+  margin-right: 40px;
   display: flex;
   justify-content: space-between;
   align-items: center;
