--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="header">
   <div>
-    <%= link_to wines_path do%>
+    <%= link_to root_path do%>
       <%= image_tag 'logo.png' %>
     <% end %>
   </div>
