--- a/app/assets/stylesheets/_merch.scss
+++ b/app/assets/stylesheets/_merch.scss
@@ -1,5 +1,9 @@
 @import 'fonts';
 
+.merch-content {
+  margin-bottom: 60px;
+}
+
 .merch-content h2{
   font-family: $font-header;
   font-weight: $font-weight-regular;
