--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,7 +1,8 @@
 @import 'fonts';
 
 .footer {
-  background-color: transparent;
+  background-color: rgb(255, 255, 255);
+  opacity: 0.4;
   height: 60px;
   display: flex;
   justify-content: center;
@@ -15,5 +16,9 @@
     color: black;
     opacity: 0.6;
     transition: 0.3s ease-in-out;
+
+    &:hover {
+      opacity: 1;
+    }
   }
 }
