some lorem for the about section

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,8 +1,7 @@
 @import 'fonts';
 
 .footer {
-  background-color: rgb(255, 255, 255);
-  opacity: 0.4;
+  background-color: transparent;
   height: 60px;
   display: flex;
   justify-content: center;
