--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,14 @@
 <div class="flex-container">
-  <p>We are a group of wine lovers who are on a mission to learn more about what makes wine so special</p>
+  <div class="about-content">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic beatae dolore consectetur, nam similique temporibus voluptas quod, modi nostrum incidunt, possimus quas! Harum asperiores quidem ipsam quis suscipit aut distinctio?
+    Natus, quibusdam. Impedit earum facere expedita quisquam praesentium dolores, odio ducimus consequatur sint distinctio cum deserunt labore error sed dolor alias libero laborum ab, in eligendi ipsa nihil quaerat! Minus.
+    Impedit error doloremque repellat quaerat quo, quod vel modi eveniet placeat, ducimus fugiat voluptatibus ab sunt ad voluptas officiis aliquam ipsam ipsa maiores eum, ratione tempore porro in aut. Ipsa.
+    Nihil eos dolore enim assumenda exercitationem! Cumque eaque, porro repudiandae et, eius nam odio placeat, tenetur iusto repellendus ut odit nulla nesciunt dolore fugiat vitae facilis quasi! Dolor, vero laborum?
+    Minima explicabo id placeat, ipsa cum labore eum dolores deserunt nihil quaerat pariatur, velit voluptatum fugit eveniet quae illo aliquid facilis quas? Velit laudantium et veritatis quam illo voluptas ipsum.
+    Qui voluptas, cumque commodi ipsum perspiciatis incidunt, veniam porro temporibus a eligendi ex enim! Numquam error sequi non impedit cum nam nesciunt obcaecati illo incidunt laudantium, ea sunt temporibus autem.
+    Cupiditate quas, sint sit expedita quae recusandae sed delectus consequuntur ipsam quis doloremque, voluptates ab magni repellendus odit aspernatur esse amet? Excepturi magnam adipisci alias vitae expedita assumenda modi saepe.
+    Quos, vero? Possimus iusto ad perferendis ipsum? Repellendus quos officiis saepe fugit unde mollitia iste veniam accusantium, cupiditate rerum sequi, ut, delectus suscipit in reprehenderit? Iure provident alias cupiditate id.
+    Vero non corrupti quasi illum dolor voluptatibus fuga error veniam, perferendis dicta laboriosam, hic possimus quae deleniti tempore aperiam nesciunt earum officiis expedita! Veniam, dicta enim. Ipsum blanditiis esse possimus.
+    Placeat libero ratione, architecto debitis sapiente laborum provident veniam possimus corporis quis molestias porro distinctio, nostrum eveniet vitae natus ut. Saepe velit iste, iusto quo odio accusantium possimus eveniet minima?</p>
+  </div>
 </div>
